# ZeroCore

./: CMakeLists.txt
Extensions/: CMakeLists.txt
Extensions/CodeTranslator/: CMakeLists.txt
Extensions/Editor/: BackgroundTaskUi.cpp  CMakeLists.txt  ItemList.cpp
Extensions/Gameplay/: CMakeLists.txt
Extensions/RayTracer/: CMakeLists.txt
Extensions/Scintilla/: CMakeLists.txt
Extensions/SpirV/: CMakeLists.txt
Extensions/UiWidget/: CMakeLists.txt
Extensions/Widget/: CMakeLists.txt  Controls.cpp  TagWidgets.cpp
Extensions/ZilchShaders/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/BrowserSubProcess/: CMakeLists.txt  Generated.cmake
Projects/ZeroEditor/: CMakeLists.txt
Projects/ZeroLauncher/: CMakeLists.txt
Projects/ZeroLauncher/ZeroLauncher/: CMakeLists.txt
Projects/ZeroLauncher/ZeroLauncherSharedLibrary/: CMakeLists.txt
Systems/: CMakeLists.txt
Systems/Content/: CMakeLists.txt
Systems/Engine/: CMakeLists.txt
Systems/Engine/Action/: ActionEase.hpp
Systems/Graphics/: CMakeLists.txt
Systems/Networking/: BitStreamExtended.cpp  CMakeLists.txt
Systems/Physics/: CMakeLists.txt  PhysicsCar.cpp  TimeOfImpact.cpp  TimeOfImpactDebug.cpp
Systems/Sound/: CMakeLists.txt  DspFilterNodes.cpp  Filters.cpp
Systems/Startup/: CMakeLists.txt
Systems/ZilchScript/: CMakeLists.txt
ZeroLibraries/: CMakeLists.txt
ZeroLibraries/Common/: CMakeLists.txt
ZeroLibraries/Dash/: CMakeLists.txt  ReplicaProperty.cpp
ZeroLibraries/Geometry/: CMakeLists.txt
ZeroLibraries/Meta/: CMakeLists.txt
ZeroLibraries/Platform/: CMakeLists.txt
ZeroLibraries/Serialization/: CMakeLists.txt
ZeroLibraries/SpatialPartition/: CMakeLists.txt
ZeroLibraries/Support/: CMakeLists.txt
ZeroLibraries/Zilch/: CMakeLists.txt
cmake/Utilities/: Zero_Custom_Commands.cmake  Zero_Mulitarget_Functions.cmake  Zero_Target_Precompiled_Headers.cmake
